{
  "version": 4,
  "terraform_version": "1.9.4",
  "serial": 38,
  "lineage": "b15ebfc2-6ee5-b5d4-6028-7d1e407c0ded",
  "resources": [
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-08-22T06:28:51.448-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraform-432611/global/firewalls/allow-http-ssh",
            "log_config": [],
            "name": "allow-http-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-432611/global/networks/default",
            "priority": 1000,
            "project": "terraform-432611",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-432611/global/firewalls/allow-http-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2024-08-22T06:29:03.577-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraform-432611/global/firewalls/allow-all",
            "log_config": [],
            "name": "allow-all",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-432611/global/networks/my-vpc",
            "priority": 1000,
            "project": "terraform-432611",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-432611/global/firewalls/allow-all",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.google_compute_network.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "description": "Custom vpc network",
            "enable_ula_internal_ipv6": false,
            "id": "projects/terraform-432611/global/networks/my-vpc",
            "mtu": 0,
            "name": "my-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "330365739291280380",
            "project": "terraform-432611",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-432611/global/networks/my-vpc"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-08-22T06:29:03.641-07:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/terraform-432611/regions/us-east1/subnetworks/public-subnet-1",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "public-subnet-1",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-432611/global/networks/my-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "terraform-432611",
            "purpose": "PRIVATE",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-432611/regions/us-east1/subnetworks/public-subnet-1",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.vpc.google_compute_network.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-08-22T06:29:04.681-07:00",
            "gateway_address": "10.0.2.1",
            "id": "projects/terraform-432611/regions/us-east1/subnetworks/public-subnet-2",
            "ip_cidr_range": "10.0.2.0/24",
            "name": "public-subnet-2",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-432611/global/networks/my-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "terraform-432611",
            "purpose": "PRIVATE",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-432611/regions/us-east1/subnetworks/public-subnet-2",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.vpc.google_compute_network.my_vpc"
          ]
        }
      ]
    }
  ]
}